ac-331.2: fixed the vertical alignment on the search results page.

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1025,3 +1025,9 @@ footer {
 .search-text,.close-icon,.search-query {
     position: relative;
 }
+.search-hits {
+    td, th {
+        vertical-align: text-top;
+    }
+}
+
